Still trying to fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -63,12 +63,6 @@ html {
   color: #ffffff;
   text-decoration: none;
 }
-
-
-img {
-    height: 90%; 
-    width: 100%;
-}
    
 
 h1, h2, h3 {
@@ -156,13 +150,10 @@ h1, h2, h3 {
     margin-right: auto;   
 }
 
-.portfolioimage {
-    padding: 1em;
-    display:block;
-}
 
-tallportfolioimage{
+.portfolioimage{
     display: block;
+    padding-top: 1em;
     padding-left: 1em;
     padding-right: 1em;
 }
